--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@
             if (scopes.includes("ROLE_ADMIN")) {
                 window.location.href = 'adminDashboard/adminDashboard.html';
             } else if (scopes.includes("ROLE_WAITER")) {
-                window.location.href = 'waiter.html';
+                window.location.href = '../../waiter/index.html';
             } else {
                 window.location.href = 'adminDashboard/adminDashboard.html'; // mặc định fallback
             }
