--- a/schedule/lichlam.html
+++ b/schedule/lichlam.html
@@ -501,9 +501,9 @@ select[multiple] option:checked {
                 <label for="area">Khu vực (Area)</label>
                 <select id="area" name="area">
                     <option value="">Chọn khu vực...</option>
-                    <option value="C1">C1</option>
-                    <option value="C2">C2</option>
-                    <option value="C3">C3</option>
+                    <option value="A">A</option>
+                    <option value="B">B</option>
+                    <option value="C">C</option>
                 </select>
             </div>
             <div class="form-group">
