--- a/schedule/lichlam.html
+++ b/schedule/lichlam.html
@@ -410,7 +410,7 @@ select[multiple] option:checked {
 <body>
 <div class="container" id="container">
     <div class="top-nav">
-        <a href="staffList.html" class="home-btn">← Quay Lại</a>
+        <a href="/staff-manager/staffList.html" class="home-btn">← Quay Lại</a>
     </div>
 
     <div class="header">
